--- a/src/app/shared/component/shift-card/shift-card.component.html
+++ b/src/app/shared/component/shift-card/shift-card.component.html
@@ -45,7 +45,7 @@
                         <mat-spinner *ngIf="isRefresh" [diameter]="20"></mat-spinner>
                     </div>
                 </div>
-                <div class="cursor-pointer button-rounded mr-10px">
+                <div (click)="goToSetting()" class="cursor-pointer button-rounded mr-10px">
                     <mat-icon svgIcon="setting"></mat-icon>
                 </div>
 
