--- a/src/app/main/pages/other-income/other-income.component.html
+++ b/src/app/main/pages/other-income/other-income.component.html
@@ -5,6 +5,7 @@
         </button>
         <p class="mb-0 text-title">Pemasukan Lainnya</p>
     </div>
+    <mat-progress-bar *ngIf="oIncomeRepo.is_loading_submit" mode="indeterminate"></mat-progress-bar>
 
     <div class="d-flex container-main">
         <div class="col-5 p-2">
@@ -77,7 +78,11 @@
                             <div class="list-a d-flex align-items-center">
                                 <mat-icon class="icon-calendar-2" svgIcon="receipt"></mat-icon>
                                 <p class="mb-0 mr-1 text-temp t-primary">Tipe Pemasukan : </p>
-                                <p class="mb-0 fw-bold text-temp" style="font-size: 10px;">{{ inc.type | titlecase }}
+                                <p class="mb-0 fw-bold text-temp" style="font-size: 10px;">
+                                    <mat-icon class="icon-calendar-2"
+                                        svgIcon="{{ inc.type == 'CASH' ? 'wallet-cash' : 'debit'}}"></mat-icon>{{
+                                    inc.type |
+                                    titlecase }}
                                 </p>
                             </div>
                         </div>
@@ -132,7 +137,7 @@
 
                 </div>
 
-                <p class="text-head-primary py-3 mb-0">Pilih Metode Pembayaran Deposit</p>
+                <p class="text-head-primary py-3 mb-0">Pilih Metode Pemasukan</p>
 
                 <mat-tab-group (selectedTabChange)="tabChanged($event)" mat-align-tabs="center"
                     class="bg-white m-2 h-auto" animationDuration="0ms">
@@ -164,8 +169,10 @@
                                     <button (click)="oIncomeRepo.reset_income()" class="income-reset"
                                         mat-raised-button>Reset
                                         Pemasukan</button>
-                                    <button (click)="oIncomeRepo.submit_income()" class="income"
-                                        mat-raised-button>Simpan Pemasukan</button>
+                                    <button
+                                        [disabled]="oIncomeRepo.create_by_cash.cash == 0 && (oIncomeRepo.create_income.note?? '') == ''"
+                                        (click)="oIncomeRepo.submit_income()" class="income" mat-raised-button>Simpan
+                                        Pemasukan</button>
                                 </div>
                             </div>
                         </div>
