--- a/src/styles.css
+++ b/src/styles.css
@@ -196,6 +196,21 @@ body {
   left: -40px;
 }
 
+.dropdown-position-status {
+  min-width: 233px !important;
+  margin: 30px 0px !important;
+  position: absolute !important;
+  top: 52px !important;
+  left: -25px !important;
+}
+.dropdown-position-type {
+  min-width: 230px !important;
+  margin: 30px 0px !important;
+  position: absolute !important;
+  top: 171px !important;
+  left: -23px;
+}
+
 .droprown-table {
   min-width: 285px !important;
   margin: 30px 0px;
@@ -272,14 +287,14 @@ body {
 .btn-confirm {
   background: var(--primary-200);
   color: white;
-  min-width: 100px !important;
+  min-width: 200px !important;
   margin-right: 10px !important;
 }
 
 .btn-cancel {
   background: #ffffff;
   color: var(--primary-200);
-  min-width: 100px !important;
+  min-width: 200px !important;
   margin-right: 10px !important;
   border: 1px solid var(--primary-200) !important;
 }
