--- a/src/app/main/pages/cashier/component/section-list-order/list-order.component.css
+++ b/src/app/main/pages/cashier/component/section-list-order/list-order.component.css
@@ -164,13 +164,19 @@ input:focus-visible {
 }
 
 .button-next-prev {
-  background: #045b62;
-  box-shadow: 0px 4px 20px rgb(0 0 0 / 5%);
-  border-radius: 4px;
-  gap: 10px;
-  height: 30px;
-  /* width: 100%;
-  height: 100%; */
+  border-radius: 8px;
+  border: 1px solid #045b62;
+  height: 40px;
+  width: 40px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  cursor: pointer;
+}
+
+.disable-next-prev {
+  cursor: not-allowed;
+  opacity: 0.2;
 }
 
 .icon-next-prev {
@@ -182,4 +188,8 @@ input:focus-visible {
 
 .icon-next-prev svg {
   filter: invert(1);
+}
+
+::-webkit-scrollbar {
+  display: none;
 }
