--- a/src/app/shared/component/shift-card/shift-card.component.html
+++ b/src/app/shared/component/shift-card/shift-card.component.html
@@ -1,12 +1,26 @@
 <div class="card-primary">
     <p class="text-title-general">Informasi Pergantian (SHIFT)</p>
     <div class="d-flex">
-        <div class="col d-flex">
-            <div class="box-panel-success mr-10px">Shift Siang</div>
-            <div class="box-panel-uknown cursor-pointer">Shift Malam</div>
+        <div class="d-flex">
+
+            <mat-radio-group aria-label="Select an option">
+                <mat-radio-button [disabled]="this.shift?.type == 'MALAM'"
+                    [class.box-panel-success]="this.shift?.type == 'SIANG'" [checked]="this.shift?.type == 'SIANG'"
+                    class="r-btn" value="SIANG">Shift
+                    Siang</mat-radio-button>
+                <mat-radio-button [disabled]="this.shift?.type == 'SIANG'"
+                    [class.box-panel-success]="this.shift?.type == 'MALAM'" [checked]="this.shift?.type == 'MALAM'"
+                    class="r-btn box-panel-success" value="MALAM">Shift
+                    Malam</mat-radio-button>
+            </mat-radio-group>
+
         </div>
-        <div class="col text-end">
-            <mat-slide-toggle [checked]="isActive">{{ isActive ? 'Aktif' : 'Tidak Aktif'}}</mat-slide-toggle>
+        <div class="col d-flex justify-content-end align-items-center">
+            <button (click)="addCashIsActive()" class="add-cash" mat-button><mat-icon
+                    svgIcon="plus-2"></mat-icon><span>Tambah Kas</span></button>
+            <mat-slide-toggle [disabled]="isActive" (click)="changeIsAcive($event)" [checked]="isActive">
+                {{ isActive ? 'Aktif' : 'Tidak Aktif'}}
+            </mat-slide-toggle>
         </div>
     </div>
     <hr>
