--- a/src/app/main/pages/cashier/component/section-payment-order/payment-order.component.html
+++ b/src/app/main/pages/cashier/component/section-payment-order/payment-order.component.html
@@ -208,12 +208,13 @@
                                 </span>
                             </div>
                         </div>
-                        <section class="slide-section">
+                        <!-- AKAN DIGUNAKAN JIKA DIPERLUKAN -->
+                        <!-- <section class="slide-section">
                             <mat-slide-toggle class="slide-margin" [color]="color" [checked]="checkoutRepo.charge_admin"
                                 [disabled]="disabled" (change)="toggleIsCharge($event)">
                                 Kenakan Biaya Cas
                             </mat-slide-toggle>
-                        </section>
+                        </section> -->
                         <section class="slide-section">
                             <mat-slide-toggle class="slide-margin" [color]="color" [checked]="checkoutRepo.isTax"
                                 [disabled]="disabled" (change)="toggleIsTax($event)">
