--- a/src/app/main/pages/cashier/component/section-split-order/split.component.html
+++ b/src/app/main/pages/cashier/component/section-split-order/split.component.html
@@ -181,7 +181,7 @@
                                                         (click)="plus(i, it.menuId?? '', (it.id?? 0))"
                                                         class="btn-plus-minus d-flex align-items-center justify-content-center"
                                                         mat-button>
-                                                        <mat-icon svgIcon="plus"></mat-icon>
+                                                        <mat-icon class="plus-2" svgIcon="plus-2"></mat-icon>
                                                     </div>
                                                 </div>
                                             </div>
