--- a/src/styles.css
+++ b/src/styles.css
@@ -482,6 +482,16 @@ body {
   color: #045b62;
 }
 
+mat-card.mat-card {
+  background: #ffffff !important;
+  border-bottom: 1px solid #e5e5e5 !important;
+  box-shadow: 0px 0px 18px rgba(166, 166, 166, 0.16) !important;
+}
+
+.plus-2 > svg {
+  filter: invert(1);
+}
+
 /* MAT DRAWER SIDENAV */
 
 .mat-drawer-order {
