--- a/src/app/main/pages/cashier/_dialog/reservation/dialog-reservation.component.css
+++ b/src/app/main/pages/cashier/_dialog/reservation/dialog-reservation.component.css
@@ -1,37 +1,73 @@
-@import url("https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700");
-/* html {
-  margin: 0;
-  background: #f0f4f7;
-}
-
-body {
+.center {
+  margin: auto;
+  width: 100%;
+  height: 86%;
+  padding: 44px;
+  overflow: hidden;
+  align-items: center;
   display: flex;
-  height: 100vh;
-  width: 100vw;
   justify-content: center;
-  align-items: flex-start;
-  font-family: "Roboto", sans-serif;
-  color: #162d3d;
-} */
-
-button {
-  font-family: "Roboto", sans-serif;
 }
 
-a {
-  text-decoration: none;
+.center .mat-icon {
+  width: 100%;
+  height: fit-content;
 }
 
-* {
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  text-rendering: optimizeLegibility;
+/* ::ng-deep .center .mat-icon > svg {
+    transform: scale(1);
+  } */
+
+.text-review {
+  font-style: normal;
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 25px;
+  /* identical to box height */
+  text-align: center;
+  /* Neutral / 400 */
+  color: #1e1e1e;
+  /* Inside auto layout */
+  flex: none;
+  order: 0;
+  align-self: stretch;
+  flex-grow: 0;
+  margin-bottom: 0;
 }
 
-*,
-*:before,
-*:after {
-  box-sizing: border-box;
+.text-empty {
+  font-size: 12px;
+}
+
+.button-next-prev {
+  border-radius: 8px;
+  border: 1px solid #045b62;
+  height: 40px;
+  width: 40px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  cursor: pointer;
+}
+
+.disable-next-prev {
+  cursor: not-allowed;
+  opacity: 0.2;
+}
+
+.icon-next-prev {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 0px 8px;
+}
+
+.icon-next-prev svg {
+  filter: invert(1);
+}
+
+::-webkit-scrollbar {
+  display: none;
 }
 
 .easeSlow {
@@ -50,42 +86,38 @@ a {
   transition: all 230ms cubic-bezier(0.19, 1, 0.22, 1);
 }
 
-.list-reservation {
-  max-height: 80vh !important;
-  overflow: auto;
-}
-
-.bossWrapp {
-  overflow: auto;
-  /* margin: 20vh 0 20vh 0; */
-  border-radius: 8px;
-  /* width: 648px; */
-  height: auto;
-  border-radius: 4px;
-  display: flex;
-  flex-direction: column;
-  align-items: flex-start;
-  align-content: flex-start;
-  justify-content: flex-start;
-  -webkit-backface-visibility: hidden;
-  backface-visibility: hidden;
-}
-
 .icon-img {
   width: 72px;
 }
 
+.pos-relative {
+  position: relative;
+}
+
+.sticky-bottom {
+  position: absolute;
+  bottom: 0;
+}
+
+.btn-close-s {
+  background: #045b62;
+  color: #fff;
+  width: 100px;
+}
+
+.container-reservation-list {
+  display: grid;
+  align-self: start;
+  justify-self: start;
+  align-items: start;
+  gap: 8px;
+  height: 90vh;
+  padding: 0px 10px;
+  overflow: auto;
+}
+
 .single {
-  /* padding: 39px 30px;
-  display: flex;
-  flex-direction: row;
-  background: white;
-  border-bottom: 1px solid #e3ebf1;
-  -webkit-backface-visibility: hidden;
-  backface-visibility: hidden;
-  align-items: center;
-  align-content: flex-start; */
-  margin: 10px 0px;
+  height: fit-content;
   padding: 20px;
   display: flex;
   flex-direction: row;
@@ -224,57 +256,4 @@ a {
   text-align: center;
   color: #045b62;
   font-weight: 800;
-}
-
-.text-mute-small {
-  font-size: 12px;
-  line-height: 16px;
-  text-align: center;
-  /* Neutral/300 */
-  color: #989898;
-}
-
-.center {
-  margin: auto;
-  width: 100%;
-  height: 86%;
-  padding: 44px;
-  overflow: hidden;
-  align-items: center;
-  display: flex;
-  justify-content: center;
-}
-
-.center .mat-icon {
-  width: 100%;
-  height: fit-content;
-}
-
-/* ::ng-deep .center .mat-icon > svg {
-  transform: scale(1);
-} */
-
-.text-review {
-  font-style: normal;
-  font-weight: 700;
-  font-size: 14px;
-  line-height: 25px;
-  /* identical to box height */
-  text-align: center;
-  /* Neutral / 400 */
-  color: #1e1e1e;
-  /* Inside auto layout */
-  flex: none;
-  order: 0;
-  align-self: stretch;
-  flex-grow: 0;
-  margin-bottom: 0;
-}
-
-.text-empty {
-  font-size: 12px;
-}
-
-::-webkit-scrollbar {
-  display: none;
 }
