--- a/src/app/main/pages/shift/shift.component.css
+++ b/src/app/main/pages/shift/shift.component.css
@@ -58,6 +58,23 @@ svg {
   gap: 8px;
 }
 
+.text-date {
+  font-style: normal;
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 26px;
+  color: #1e1e1e;
+  margin-right: 0px;
+}
+
+.span-range {
+  margin: 0px 10px;
+  display: flex;
+  align-items: center;
+  font-weight: bold;
+  font-size: 20px;
+}
+
 /* ========================= */
 /*          ASDDDDDDD        */
 /* ========================= */
@@ -234,11 +251,16 @@ input:focus-visible {
   width: 18px;
 }
 
-.btn-print {
+.btn-detail {
   background: #ffffff;
   color: #045b62;
   border: 1px solid #045b62;
   font-size: 12px;
+}
+
+.detail-active {
+  background: #045b62;
+  color: #fff;
 }
 
 .button-next-prev {
@@ -255,4 +277,127 @@ input:focus-visible {
 .disable-next-prev {
   cursor: not-allowed;
   opacity: 0.2;
+}
+
+/*       CARD - DETAIL       */
+/*       CARD - DETAIL       */
+/*       CARD - DETAIL       */
+/*       CARD - DETAIL       */
+/*       CARD - DETAIL       */
+
+.container-detail-shift {
+  height: 90vh;
+  padding: 10px;
+  overflow: auto;
+}
+
+/* .box-temp {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  padding: 0px;
+  width: inherit;
+  height: auto;
+  flex: none;
+  order: 0;
+  align-self: stretch;
+  flex-grow: 0;
+} */
+
+.box-temp {
+  padding: 16px 24px 24px;
+  margin-bottom: 8px;
+  background: #ffffff;
+  box-shadow: 0px 0px 18px rgb(166 166 166 / 16%);
+  border-radius: 8px;
+}
+
+.header-temp {
+  width: 100%;
+  padding-bottom: 5px;
+  border: 0;
+  border-bottom: 2px;
+  border-color: #e1e1e1;
+  border-style: dashed;
+}
+
+.body-temp {
+  width: 100%;
+  margin-top: 5px;
+}
+
+.icon-temp {
+  transform: scale(0.7);
+  margin-right: 5px;
+}
+
+.text-temp {
+  font-style: normal;
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 26px;
+  color: #1e1e1e;
+  margin-right: 15px;
+}
+
+.code-id {
+  font-weight: 700;
+  color: var(--primary-200);
+}
+
+::ng-deep mat-checkbox.merge-check .mat-checkbox-checkmark-path {
+  background-color: #045b62 !important;
+}
+
+::ng-deep .mat-checkbox-layout {
+  margin-right: 10px !important;
+  margin-left: 4px !important;
+}
+
+.mat-checkbox.merge-check {
+  height: 10px;
+  display: contents;
+}
+
+.display-grid {
+  display: grid !important;
+  gap: 1px;
+}
+
+.pay-temp {
+  color: #989898;
+  font-size: 13px;
+}
+
+.total-temp {
+  color: #1e1e1e;
+  font-style: normal;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 25px;
+}
+
+.opt-temp {
+  padding: 10px 40px;
+}
+
+.btn-see {
+  background: #045b62;
+  border-radius: 6px;
+  min-width: 134px;
+  color: white;
+  height: auto;
+}
+
+.active {
+  border-color: #045b62 !important;
+}
+
+p.active {
+  color: #045b62 !important;
+}
+
+::ng-deep mat-icon.mat-icon.active > svg {
+  filter: invert(24%) sepia(58%) saturate(1206%) hue-rotate(146deg)
+    brightness(94%) contrast(97%);
 }
