--- a/src/app/main/pages/shift/shift.component.html
+++ b/src/app/main/pages/shift/shift.component.html
@@ -7,15 +7,7 @@
     </div>
 
     <div class="d-flex container-content">
-        <div class="col p-2">
-            <div class="grid">
-                <div class="card-box">
-                </div>
 
-                <div class="card-box">
-                </div>
-            </div>
-        </div>
         <div class="col-5 p-2">
             <div class="card-box">
                 <p class="fw-bold primary p-2">Riwayat Pergantian Kasir</p>
@@ -31,7 +23,7 @@
 
                 <ng-container *ngIf="_shiftRepoL.shifts.length > 0; else empty">
                     <div class="list-container">
-                        <div class="card-item" *ngFor="let item of _shiftRepoL.shifts">
+                        <div class="card-item" *ngFor="let item of _shiftRepoL.shift_close">
                             <div class="item-income header-temp">
                                 <div class="col d-flex">
                                     <p class="text-temp mb-0">Kasir : <span class="t-primary">{{ item.name }} - @{{
@@ -39,8 +31,11 @@
                                 </div>
                                 <div class="col-5 d-flex justify-content-end">
                                     <!-- <mat-icon class="icon-temp" svgIcon="calendar"></mat-icon> -->
-                                    <p class="text-temp fw-bold mb-0">{{ item.startTime }}</p>
-                                    <p class="text-temp fw-bold mb-0">{{ item.endTime }}</p>
+                                    <p class="text-date fw-bold mb-0">{{ item.startTime }}</p>
+                                    <span class="span-range">-</span>
+                                    <p class="text-date fw-bold mb-0">{{ item.status == 'CLOSE' ?
+                                        item.endTime : 'Belum Tutup Shift' }}
+                                    </p>
                                 </div>
                             </div>
                             <div class="list-a d-flex align-items-center">
@@ -63,7 +58,9 @@
                                 </p>
                             </div>
                             <div class="d-flex justify-content-end p-1">
-                                <button mat-button class="btn-print">Print</button>
+                                <button [class.detail-active]="id_active == item.id"
+                                    (click)="set_detail(item.id, item.sales)" mat-button
+                                    class="btn-detail">Detail</button>
                             </div>
                         </div>
                     </div>
@@ -89,6 +86,78 @@
                 </div>
             </div>
         </div>
+
+        <div class="col p-2">
+            <div class="grid">
+                <div class="card-box">
+
+                    <div class="container-detail-shift">
+                        <ng-container *ngFor="let sale of sales">
+                            <div class="box-temp">
+                                <!-- HEADER -->
+                                <div class="d-flex header-temp">
+                                    <div class="col d-flex">
+                                        <mat-icon class="icon-temp" svgIcon="bell"></mat-icon>
+                                        <p class="text-temp mb-0">ID Order : <span class="code-id">#{{ sale.id }}</span>
+                                        </p>
+                                    </div>
+                                    <div class="col d-flex justify-content-end">
+                                        <mat-icon class="icon-temp" svgIcon="calendar"></mat-icon>
+                                        <p class="text-temp mb-0">{{ sale.createdAt | milistodate: "full" }}</p>
+                                        <mat-icon class="utama" color="dark" svgIcon="three-dot"></mat-icon>
+                                    </div>
+                                </div>
+                                <!-- HEADER -->
+                                <!-- BODY -->
+                                <div class="d-flex body-temp">
+                                    <div class="col display-grid">
+                                        <div class="col d-flex">
+                                            <mat-icon class="icon-temp" svgIcon="table"></mat-icon>
+                                            <p class="text-temp mb-0"> {{ sale.name == "" ? "" : sale.name }}</p>
+                                        </div>
+                                        <div class="col d-flex">
+                                            <mat-icon class="icon-temp" svgIcon="note"></mat-icon>
+                                            <p class="text-temp mb-0">Tipe Pembayaran : <strong>{{
+                                                    paymRepo.getPaymentTypeById(sale.paymentTypeId)?? 'Tunai'
+                                                    }}</strong>
+                                            </p>
+                                        </div>
+                                        <ng-container *ngIf="sale.paymentMethod == 'CASH'">
+                                            <div class="col d-flex">
+                                                <mat-icon class="icon-temp" svgIcon="money-cash"></mat-icon>
+                                                <p class="text-temp mb-0">Tunai : <strong>{{ (sale.cash?? 0) | rupiah
+                                                        }}</strong>
+                                                </p>
+                                            </div>
+                                            <div class="col d-flex">
+                                                <mat-icon class="icon-temp" svgIcon="wallet-cash"></mat-icon>
+                                                <p class="text-temp mb-0">Kembalian : <strong>{{ (sale.change?? 0) |
+                                                        rupiah
+                                                        }}</strong>
+                                                </p>
+                                            </div>
+                                        </ng-container>
+
+                                    </div>
+                                    <div class="col-5 display-grid opt-temp">
+                                        <div class="col display-grid">
+                                            <p class="pay-temp mb-0 text-end">Total</p>
+                                            <p class="total-temp mb-0 text-end">{{ sale.total | rupiah }}</p>
+                                        </div>
+                                        <!-- <div class="col d-flex justify-content-end">
+                                        <button *ngIf="!onselect" (click)="onActive(sale.id)" mat-button class="btn-see">Lihat</button>
+                                    </div> -->
+                                    </div>
+                                </div>
+                                <!-- BODY -->
+                            </div>
+                        </ng-container>
+                    </div>
+
+                </div>
+            </div>
+        </div>
+
     </div>
 
 </div>
