--- a/src/styles.css
+++ b/src/styles.css
@@ -287,10 +287,10 @@ body {
 .btn-submit {
   /* min-width: 250px !important; */
   width: 100% !important;
-  height: 50px;
+  /* height: 50px; */
+  border-radius: 8px;
   background: var(--primary-200);
   color: white;
-  border-radius: 50px !important;
 }
 
 .btn-confirm {
